# md-bench

./: README.md  md-bench.cabal  stack.yaml
app/: Main.hs
bench/memory/: Main.hs
bench/speed/: Main.hs
src/: MD.hs
