name:                md-bench
version:             0.1.0.0
homepage:            https://github.com/githubuser/md-bench#readme
license:             BSD3
license-file:        LICENSE.md
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     src
  build-depends:      base             >= 4.7 && < 5.0
                    , blaze-html
                    , cheapskate
                    , cmark
                    , lucid
                    , markdown
                    , mmark
                    , pandoc
                    , text
  exposed-modules:    MD
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010

benchmark bench-speed
  main-is:            Main.hs
  hs-source-dirs:     bench/speed
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , criterion        >= 0.6.2.1 && < 1.3
                    , mmark
                    , text             >= 0.2 && < 1.3
                    , deepseq
                    , md-bench
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010

benchmark bench-memory
  main-is:            Main.hs
  hs-source-dirs:     bench/memory
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , deepseq
                    , lucid
                    , mmark
                    , text             >= 0.2 && < 1.3
                    , weigh            >= 0.0.4
                    , md-bench
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010
