name:                 md-bench
version:              0.0.1.0
cabal-version:        >= 1.18
tested-with:          GHC==8.2.2
license:              BSD3
license-file:         LICENSE.md
author:               Mark Karpov <markkarpov92@gmail.com>
maintainer:           Mark Karpov <markkarpov92@gmail.com>
homepage:             https://github.com/mrkkrp/md-bench
bug-reports:          https://github.com/mrkkrp/md-bench/issues
category:             Categories
synopsis:             Description
build-type:           Simple
description:          Description.
extra-doc-files:      README.md
data-files:           data/README.md

source-repository head
  type:               git
  location:           https://github.com/mrkkrp/md-bench.git

library
  hs-source-dirs:     src
  build-depends:      base             >= 4.7 && < 5.0
                    , blaze-html
                    , cheapskate
                    , cmark
                    , lucid
                    , markdown
                    , mmark
                    , pandoc
                    , text
  exposed-modules:    MD
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010

executable md-bench
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      base             >= 4.7 && < 5.0
                    , md-bench
                    , text
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010

benchmark bench-speed
  main-is:            Main.hs
  hs-source-dirs:     bench/speed
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , criterion        >= 0.6.2.1 && < 1.3
                    , mmark
                    , text             >= 0.2 && < 1.3
                    , deepseq
                    , md-bench
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010

benchmark bench-memory
  main-is:            Main.hs
  hs-source-dirs:     bench/memory
  type:               exitcode-stdio-1.0
  build-depends:      base             >= 4.8 && < 5.0
                    , deepseq
                    , lucid
                    , mmark
                    , text             >= 0.2 && < 1.3
                    , weigh            >= 0.0.4
                    , md-bench
  ghc-options:        -O2 -Wall
  default-language:   Haskell2010
